--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -42,3 +42,9 @@ a {
 a:hover, a:active, a::after {
     color: #3f51b5;
 }
+
+#googlebtn {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
