--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -17,9 +17,9 @@
       <button *ngIf="name" (click)="openprofile()" mat-button class="example-icon" aria-label="Example icon-button with share icon">
         Hello, {{name}}
       </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
         <mat-icon>share</mat-icon>
-      </button>
+      </button> -->
     </mat-toolbar>
 </p>
 <div class="content">
