--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -10,7 +10,7 @@
                         <mat-form-field appearance="standard">
                             <mat-label>Name</mat-label>
                             <input matInput type="text" name="name" placeholder="xyz abc" formControlName="name">
-                            <button mat-icon-button matSuffix><mat-icon>people</mat-icon></button>
+                            <!-- <button mat-icon-button matSuffix><mat-icon>people</mat-icon></button> -->
                             <mat-error *ngIf="!registerForm.controls.name.valid">
                                 Enter valid name    ex. xyz xyz
                             </mat-error>
@@ -20,7 +20,7 @@
                         <mat-form-field appearance="standard">
                             <mat-label>E-mail</mat-label>
                             <input matInput type="text" name="email" placeholder="example@xyz.com" formControlName="email">
-                            <button mat-icon-button matSuffix><mat-icon>alternate_email</mat-icon></button>
+                            <!-- <button mat-icon-button matSuffix><mat-icon>alternate_email</mat-icon></button> -->
                             <mat-error *ngIf="!registerForm.controls.email.valid">
                                 <mat-error *ngIf="this.registerForm.controls.email.errors.isEmailExist">That email is already taken</mat-error>
                                 <mat-error *ngIf="this.registerForm.controls.email.errors.required || this.registerForm.controls.email.errors.pattern">Enter valid email    ex. example@xyz.com</mat-error> 
@@ -31,7 +31,7 @@
                         <mat-form-field appearance="standard">
                             <mat-label>Mobile Number</mat-label>
                             <input matInput type="number" name="mobile" placeholder="000-000-0000" formControlName="mobile">
-                            <button mat-icon-button matSuffix><mat-icon>dialpad</mat-icon></button>
+                            <!-- <button mat-icon-button matSuffix><mat-icon>dialpad</mat-icon></button> -->
                             <mat-error *ngIf="!registerForm.controls.mobile.valid">
                                 <mat-error *ngIf="this.registerForm.controls.mobile.errors.isMobileExist">That mobile number is already taken</mat-error>
                                 <mat-error *ngIf="this.registerForm.controls.mobile.errors.required || this.registerForm.controls.mobile.errors.pattern">Enter Valid mobile number</mat-error> 
@@ -56,7 +56,7 @@
                         <mat-form-field appearance="standard">
                             <mat-label>Address</mat-label>
                             <textarea id="textarea" matInput name="address" formControlName="address"></textarea>
-                            <button mat-icon-button matSuffix><mat-icon>home</mat-icon></button>
+                            <!-- <button mat-icon-button matSuffix><mat-icon>home</mat-icon></button> -->
                             <mat-error *ngIf="!registerForm.controls.address.valid">
                                 Enter Valid Addres
                             </mat-error>
@@ -81,7 +81,7 @@
                             </mat-error>
                         </mat-form-field>
                     </div>
-                    <div>
+                    <!-- <div>
                         <mat-form-field appearance="standard">
                             <mat-label>Confirm Password</mat-label>
                             <input matInput [type]="visible1 ? 'text' : 'password'" name="confirmpassword" formControlName="confirmpassword">
@@ -100,7 +100,7 @@
                                 <p *ngIf="registerForm.controls.confirmpassword.errors.mismatch">Password not match</p>
                             </mat-error>
                         </mat-form-field>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </mat-card-content>
