--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -28,16 +28,12 @@
                             <mat-form-field appearance="standard">
                                 <mat-label>Password</mat-label>
                                 <input matInput [type]="visible ? 'text' : 'password'" name="password" formControlName="password">
-                                <button type="button" mat-icon-button matSuffix
-                                (click)="visible = !visible"
-                                matTooltip="Toggle Visibility">
-                                <mat-icon *ngIf="visible">
+                                <mat-icon *ngIf="visible" matSuffix (click)="visible = !visible">
                                     visibility
                                 </mat-icon>
-                                <mat-icon *ngIf="!visible">
+                                <mat-icon (click)="visible = !visible" *ngIf="!visible" matSuffix>
                                     visibility_off
                                 </mat-icon>
-                                </button>
                                 <mat-error *ngIf="!login_mobile.controls.password.valid">
                                     Enter password
                                 </mat-error>
@@ -58,7 +54,7 @@
                             <mat-form-field appearance="standard">
                                 <mat-label>E-mail</mat-label>
                                 <input matInput name="email" placeholder="example@xyz.com" formControlName="email">
-                                <button mat-icon-button matSuffix><mat-icon>alternate_email</mat-icon></button>
+                                <mat-icon matSuffix>alternate_email</mat-icon>
                                 <mat-error *ngIf="!login_Form.controls.email.valid">
                                     Enter E-mail Address
                                 </mat-error>
