--- a/src/app/main/map/map.component.html
+++ b/src/app/main/map/map.component.html
@@ -1,4 +1,4 @@
-<agm-map [latitude]="lat" [longitude]="lng">
+<!-- <agm-map [latitude]="lat" [longitude]="lng">
   <agm-marker [latitude]="lat" [longitude]="lng">
     <agm-info-window>
       <h3><strong>Restuarant</strong></h3>
@@ -6,4 +6,5 @@
       <p>Contact US : Working</p>
     </agm-info-window>
   </agm-marker>
-</agm-map>
+</agm-map> -->
+<p>Working</p>
