resolved some issue of the deployment

--- a/src/app/auth/forget-password/forget-password.component.html
+++ b/src/app/auth/forget-password/forget-password.component.html
@@ -5,7 +5,7 @@
         <mat-form-field>
           <mat-label>E-mail</mat-label>
           <input matInput name="email" formControlName="email" placeholder="example@xyz.com">
-          <button mat-icon-button matSuffix><mat-icon>alternate_email</mat-icon></button>
+          <!-- <button mat-icon-button matSuffix><mat-icon>alternate_email</mat-icon></button> -->
           <mat-error *ngIf="!firstFormGroup.controls.email.valid">
             <mat-error *ngIf="this.firstFormGroup.controls.email.errors.required || this.firstFormGroup.controls.email.errors.pattern">Enter valid email    ex. example@xyz.com</mat-error> 
         </mat-error>
