--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -91,9 +91,9 @@
             </div>
     </mat-card-content>
     <mat-card-actions>
-        <div id="googlebtn">
+        <!-- <div id="googlebtn">
             <button type="button" mat-raised-button style="color: #3f51b5; width: 250px;" (click)="signInWithGoogle()" > Login With Google </button>
-        </div> 
+        </div>  -->
         <span>Are you new user ? &nbsp; <a [routerLink]="['/auth/register']" routerLinkActive="true">Register</a> &nbsp; now.</span>
     </mat-card-actions>
 </mat-card>
