login btn color changed

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,8 +7,8 @@
             <span>Login with</span> &nbsp;&nbsp;&nbsp;
             
             <mat-radio-group aria-label="Select an option" (change)="check($event)">
-                <mat-radio-button value="1" checked> E-mail</mat-radio-button>&nbsp;&nbsp;&nbsp;
-                <mat-radio-button value="2"> mobile</mat-radio-button>
+                <mat-radio-button color="warn" value="1" checked> E-mail</mat-radio-button>&nbsp;&nbsp;&nbsp;
+                <mat-radio-button color="primary" value="2"> mobile</mat-radio-button>
             </mat-radio-group>
         </div>
             <div id="login_details">
